--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2238,6 +2238,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "G W Y P Y W\n",
+      "Four\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(str,input().split()))\n",
+    "ans=\"Three\"\n",
+    "for i in range(a):\n",
+    "    if b[i]==\"Y\":\n",
+    "        ans=\"Four\"\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#88 B"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
