--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2305,6 +2305,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#87 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "2\n",
+      "100\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[int(input()) for _ in range(3)]\n",
+    "b=int(input())\n",
+    "c,ans=[],0\n",
+    "for k in range(a[0]+1):\n",
+    "    for i in range(a[1]+1):\n",
+    "        for j in range(a[2]+1):\n",
+    "            c.append(500*k+100*i+50*j)\n",
+    "for l in range(len(c)):\n",
+    "    if c[l]==b:\n",
+    "        ans+=1\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#90 C"
    ]
   },
