--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -509,6 +509,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#164 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "for i in range(1,101):\n",
+    "    if a[2]-i*a[1]<=0:\n",
+    "        print(\"Yes\")\n",
+    "        break\n",
+    "    elif a[0]-i*a[3]<=0:\n",
+    "        print(\"No\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#160 B"
    ]
   },
@@ -2373,7 +2398,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#164 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "apple\n",
+      "grape\n",
+      "apple\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[str(input()) for _ in range(a)]\n",
+    "print(len(set(b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2434,10 +2491,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#164 D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1817181712114\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "ans=0\n",
+    "for i in range(len(a)):\n",
+    "    for j in range(i+1,len(a)+1):\n",
+    "        if int(a[i:j])%2019==0:\n",
+    "            ans+=1\n",
+    "print(ans)"
+   ]
   }
  ],
  "metadata": {
