--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2430,6 +2430,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#163 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 2 3 4 5 6\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(1,len(b)+2):\n",
+    "    for j in range(len(b)):\n",
+    "        if i==b[j]:\n",
+    "            ans+=1\n",
+    "    print(ans)\n",
+    "    ans=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 2 3 4 5 6\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(1,a+1):\n",
+    "    print(b.count(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 2 3 4 5 6\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[0]*a\n",
+    "c=list(map(int,input().split()))\n",
+    "for i in c:\n",
+    "    b[i-1]+=1\n",
+    "print(*b,sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
