--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2566,6 +2566,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#161 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "a,b=tuple(map(int,input().split()))\n",
     "while True:\n",
     "    if a>=abs(a-b):\n",
@@ -2573,6 +2582,46 @@
     "    else:\n",
     "        break\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#160 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 4\n",
+      "1 3 17 19\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=list(map(int,input().split()))\n",
+    "c=[]\n",
+    "for i in range(a[1]):\n",
+    "    if i==a[1]-1:\n",
+    "        if b[0]==0:\n",
+    "            b[0]=a[0]\n",
+    "            c.append(abs(b[i]-b[0]))\n",
+    "        else:\n",
+    "            c.append(abs(b[i]-(b[0]+a[0])))\n",
+    "    elif i!=a[1]-1:\n",
+    "        c.append(abs(b[i]-b[i+1]))\n",
+    "print(a[0]-max(c))"
    ]
   },
   {
