--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2630,6 +2630,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#159 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "999\n",
+      "36926037.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "print(float(a/3)**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
