--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -472,6 +472,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#162 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000\n",
+      "266666333332\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=[]\n",
+    "for i in range(a+1):\n",
+    "    if i%3==0 or i%5==0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        b.append(i)\n",
+    "print(sum(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#161 B"
    ]
   },
