--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2502,6 +2502,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#83 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 4 16\n",
+      "4554\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=0\n",
+    "ans=0\n",
+    "for i in range(1,a[0]+1):\n",
+    "    for k in range(len(str(i))):\n",
+    "        b+=int(str(i)[k])\n",
+    "    if a[1]<=b<=a[2]:\n",
+    "        ans+=i\n",
+    "    b=0\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#165 C"
    ]
   },
