--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#166 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARC\n",
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=str(input())\n",
+    "if a==\"ABC\":\n",
+    "    print(\"ARC\")\n",
+    "else:\n",
+    "    print(\"ABC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#165 A"
    ]
   },
@@ -465,6 +496,33 @@
    "source": [
     "a=int(input())\n",
     "print(a//3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#166 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b,c=[],[]\n",
+    "ans=set()\n",
+    "for _ in range(a[1]):\n",
+    "    b.append(int(input()))\n",
+    "    c.append(list(map(int,input().split())))\n",
+    "for i in range(a[1]):\n",
+    "    for j in range(b[i]):\n",
+    "        ans.add(c[i][j])\n",
+    "print(a[0]-len(ans))"
    ]
   },
   {
@@ -2722,6 +2780,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#166 C ×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N,M=map(int,input().split())\n",
+    "H=list(map(int,input().split()))\n",
+    "a,ans=[],set()\n",
+    "for _ in range(M):\n",
+    "    a.append(list(map(int,input().split())))\n",
+    "for i in range(M):\n",
+    "    if H[(a[i][0])-1]>H[(a[i][1])-1]:\n",
+    "        ans.add(a[i][0])\n",
+    "        if len(ans)!=0:\n",
+    "            for k in range(len(ans)):\n",
+    "                if list(ans)[k]==a[i][1]:\n",
+    "                    ans.remove(list(ans)[k])\n",
+    "                    break\n",
+    "    elif H[(a[i][0])-1]<H[(a[i][1])-1]:\n",
+    "        ans.add(a[i][1])\n",
+    "        if len(ans)!=0:    \n",
+    "            for j in range(len(ans)):\n",
+    "                if list(ans)[j]==a[i][0]:\n",
+    "                    ans.remove(list(ans)[j])\n",
+    "                    break\n",
+    "n=set()\n",
+    "for k in range(M):\n",
+    "    for l in range(2):\n",
+    "        n.add(a[k][l])\n",
+    "print(len(ans)+M-len(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#164 C"
    ]
   },
@@ -3048,18 +3148,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
