--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2822,6 +2822,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#165  ×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=list(map(int,input().split()))\n",
+    "b=[]\n",
+    "ans=0\n",
+    "c=[]\n",
+    "for _ in range(a[2]):\n",
+    "    b.append(list(map(int,input().split())))\n",
+    "\n",
+    "for i in range(1,a[1]+1):\n",
+    "    for j in range(i,a[1]+1):\n",
+    "        for k in range(j,a[1]+1):\n",
+    "            c=[i,j,k]\n",
+    "            for l in range(a[2]):\n",
+    "                if c[b[l][1]-1]-c[b[l][0]-1]==b[l][2]:\n",
+    "                    ans+=b[l][3]\n",
+    "            d.append(ans)\n",
+    "            ans=0\n",
+    "\n",
+    "            print(max(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "a=list(map(int,input().split()))\n",
+    "b=[]\n",
+    "ans=0\n",
+    "c=range(1,a[1]+1)\n",
+    "d=[]\n",
+    "for _ in range(a[2]):\n",
+    "    b.append(list(map(int,input().split())))\n",
+    "\n",
+    "\n",
+    "for i in itertools.combinations_with_replacement(c,a[0]):\n",
+    "    for l in range(a[2]):\n",
+    "        if i[b[l][1]-1]-i[b[l][0]-1]==b[l][2]:\n",
+    "            ans+=b[l][3]\n",
+    "    d.append(ans)\n",
+    "    ans=0\n",
+    "print(max(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#164 C"
    ]
   },
@@ -3107,6 +3167,63 @@
     "    s=s+abs(b[i]-b[i-1])\n",
     "for j in range(1,a+1):\n",
     "    print(s+abs(b[j+1]-b[j-1])-abs(b[j]-b[j-1])-abs(b[j+1]-b[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#165 D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 10 9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "A,B,N=map(int,input().split())\n",
+    "a,b,x=0,0.1,1\n",
+    "while b>a:\n",
+    "    a=math.floor(A*x/B)-A*math.floor(x/B)\n",
+    "    b=math.floor(A*(x+1)/B)-A*math.floor((x+1)/B)\n",
+    "    x+=1\n",
+    "if N<=x:\n",
+    "    print(math.floor(A*N/B)-A*math.floor(N/B))\n",
+    "else:\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11 10 9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "A,B,N=map(int,input().split())\n",
+    "c=min(B-1,N)\n",
+    "print(int((A*c-A*c%B)/B))"
    ]
   },
   {
