--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2818,6 +2818,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 5\n",
+      "8 6 9 1 2 1\n",
+      "1 3\n",
+      "4 2\n",
+      "4 3\n",
+      "4 5\n",
+      "4 5\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,M=map(int,input().split())\n",
+    "H=list(map(int,input().split()))\n",
+    "t=[1]*N\n",
+    "for i in range(M):\n",
+    "    a,b=map(int,input().split())\n",
+    "    if H[a-1]>H[b-1]:\n",
+    "        t[b-1]=0\n",
+    "    elif H[a-1]<H[b-1]:\n",
+    "        t[a-1]=0\n",
+    "    else:\n",
+    "        t[a-1],t[b-1]=0,0\n",
+    "print(sum(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -3265,6 +3300,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
