--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2857,7 +2857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#165  ×"
+    "#165  C×"
    ]
   },
   {
@@ -3165,6 +3165,31 @@
    "source": [
     "a=int(input())\n",
     "print(float(a/3)**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#158 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import math\n",
+    "a,b=map(int,input().split())\n",
+    "for i in range(1,1001):\n",
+    "    if math.floor(i*0.08)==a and math.floor(i*0.1)==b:\n",
+    "        print(i)\n",
+    "        sys.exit()\n",
+    "print(-1)"
    ]
   },
   {
