--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3230,6 +3230,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#156 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "14 14 2 13 56 2 37\n",
+      "2354\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "a=list(map(int,input().split()))\n",
+    "ans=[]\n",
+    "b=0\n",
+    "if N==1:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    for i in range(min(a),max(a)+1):\n",
+    "        for k in range(N):\n",
+    "            b+=(a[k]-i)**2\n",
+    "        ans.append(b)\n",
+    "        b=0\n",
+    "    print(min(ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
