--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2,6 +2,141 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n",
+      "abcde\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=str(input())\n",
+    "t=str(input())\n",
+    "if s==t[:len(t)-1]:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 10 10 1\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b,c,k=map(int,input().split())\n",
+    "if a+b>=k:\n",
+    "    if a>=k:\n",
+    "        print(k)\n",
+    "    else:\n",
+    "        print(a)\n",
+    "else:\n",
+    "    print(a-(k-(a+b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3 10\n",
+      "60 2 2 4\n",
+      "70 8 7 9\n",
+      "50 2 3 9\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import itertools\n",
+    "n,m,x=map(int,input().split())\n",
+    "a=[]\n",
+    "b=[0]*m\n",
+    "skill=np.array([b])\n",
+    "ans=[]\n",
+    "money=0\n",
+    "for _ in range(n):\n",
+    "    a.append(list(map(int,input().split())))\n",
+    "for i in range(1,n+1):\n",
+    "    for j in itertools.combinations_with_replacement(range(1,n+1),i):\n",
+    "        for k in range(len(j)):\n",
+    "            money+=a[j[k]-1][0]\n",
+    "            skill+=np.array([a[j[k]-1][1:m+1]])\n",
+    "        if all([i>=x for i in skill[0]]):\n",
+    "            ans.append(money)\n",
+    "        money=0\n",
+    "        skill=np.array([b])\n",
+    "if len(ans)==0:\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    print(min(ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 727202214173249351\n",
+      "6 5 2 5 3 2\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "integer division or modulo by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-2bb736a056cf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mloop\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m%\u001b[0m\u001b[0mloop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mans\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mans\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mans\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
+     ]
+    }
+   ],
+   "source": [
+    "n,k=map(int,input().split())\n",
+    "a=list(map(int,input().split()))\n",
+    "ans=1\n",
+    "loop=0\n",
+    "b=0\n",
+    "for i in range(1000):\n",
+    "    ans=a[ans-1]\n",
+    "    if ans==1:\n",
+    "        loop=i+1\n",
+    "        break\n",
+    "if k%loop==0:\n",
+    "    print()\n",
+    "for _ in range(k%loop):\n",
+    "    ans=a[ans-1]\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
