--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -51,49 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 3 10\n",
-      "60 2 2 4\n",
-      "70 8 7 9\n",
-      "50 2 3 9\n",
-      "120\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import itertools\n",
-    "n,m,x=map(int,input().split())\n",
-    "a=[]\n",
-    "b=[0]*m\n",
-    "skill=np.array([b])\n",
-    "ans=[]\n",
-    "money=0\n",
-    "for _ in range(n):\n",
-    "    a.append(list(map(int,input().split())))\n",
-    "for i in range(1,n+1):\n",
-    "    for j in itertools.combinations_with_replacement(range(1,n+1),i):\n",
-    "        for k in range(len(j)):\n",
-    "            money+=a[j[k]-1][0]\n",
-    "            skill+=np.array([a[j[k]-1][1:m+1]])\n",
-    "        if all([i>=x for i in skill[0]]):\n",
-    "            ans.append(money)\n",
-    "        money=0\n",
-    "        skill=np.array([b])\n",
-    "if len(ans)==0:\n",
-    "    print(-1)\n",
-    "else:\n",
-    "    print(min(ans))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -2878,6 +2835,46 @@
     "    if str(i)==str(i)[::-1]:\n",
     "        ans+=1\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#167 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import itertools\n",
+    "n,m,x=map(int,input().split())\n",
+    "a=[]\n",
+    "b=[0]*m\n",
+    "skill=np.array([b])\n",
+    "ans=[]\n",
+    "money=0\n",
+    "for _ in range(n):\n",
+    "    a.append(list(map(int,input().split())))\n",
+    "for i in range(1,n+1):\n",
+    "    for j in itertools.combinations(range(1,n+1),i):\n",
+    "        for k in range(len(j)):\n",
+    "            money+=a[j[k]-1][0]\n",
+    "            skill+=np.array([a[j[k]-1][1:m+1]])\n",
+    "        if all([i>=x for i in skill[0]]):\n",
+    "            ans.append(money)\n",
+    "        money=0\n",
+    "        skill=np.array([b])\n",
+    "if len(ans)==0:\n",
+    "    print(-1)\n",
+    "else:\n",
+    "    print(min(ans))"
    ]
   },
   {
