--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3402,6 +3402,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#155 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "bass\n",
+      "bass\n",
+      "ans\n",
+      "ans\n",
+      "kick\n",
+      "kick\n",
+      "a\n",
+      "ans\n",
+      "bass\n",
+      "kick\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "n=int(input())\n",
+    "s=[]\n",
+    "for _ in range(n):\n",
+    "    s.append(str(input()))\n",
+    "ans=collections.Counter(s)\n",
+    "a=max(ans.values())\n",
+    "d=[i for i,k in ans.items() if a==k]\n",
+    "print(*sorted(d),sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
