--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3408,7 +3408,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3438,6 +3440,29 @@
     "a=max(ans.values())\n",
     "d=[i for i,k in ans.items() if a==k]\n",
     "print(*sorted(d),sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#154 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=int(input())\n",
+    "a=list(map(int,input().split()))\n",
+    "if len(set(a))==len(a):\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
    ]
   },
   {
