--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3471,6 +3471,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#153 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 0\n",
+      "1000000000 1000000000 1000000000\n",
+      "3000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "n,k=map(int,input().split())\n",
+    "h=sorted(list(map(int,input().split())))\n",
+    "t=h[::-1]\n",
+    "if k>n:\n",
+    "    print(0)\n",
+    "elif k==0:\n",
+    "    print(sum(h))\n",
+    "else:\n",
+    "    for i in range(k):\n",
+    "        t[i]=0\n",
+    "    print(sum(t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
