--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3509,6 +3509,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#152 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "p=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "MIN=p[0]\n",
+    "for i in range(n):\n",
+    "    if p[i]<=MIN:\n",
+    "        MIN=p[i]\n",
+    "        ans+=1\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
