--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -2,6 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#168 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=str(input())\n",
+    "if int(N[-1])==3:\n",
+    "    print(\"bon\")\n",
+    "elif int(N[-1])==0 or int(N[-1])==1 or int(N[-1])==6 or int(N[-1])==8:\n",
+    "    print(\"pon\")\n",
+    "else:\n",
+    "    print(\"hon\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#168 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=int(input())\n",
+    "S=str(input())\n",
+    "if K<len(S):\n",
+    "    print(S[:K]+\"...\")\n",
+    "else:\n",
+    "    print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#168 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "A,B,H,M=map(int,input().split())\n",
+    "c=360*np.pi/180\n",
+    "k=abs(c/(12*60*60)*(H*60*60+M*60)-c/60*M)\n",
+    "print(np.sqrt(A**2+B**2-2*A*B*np.cos(k)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#168 D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N,M=map(int,input().split())\n",
+    "a=[]\n",
+    "ans=[0]*(N-1)\n",
+    "count=0\n",
+    "b=1\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    a.append(list(map(int,input().split())))\n",
+    "while count<=M:\n",
+    "    count+=1\n",
+    "    for i in range(M):\n",
+    "        for j in range(2):\n",
+    "            if a[i][j]==b:\n",
+    "                if ans[a[i][1-j]-2]==0:\n",
+    "                    ans[a[i][1-j]-2]=count\n",
+    "            \n",
+    "    b=a[i][1-j]\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#167 A"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -22,6 +135,15 @@
     "    print(\"Yes\")\n",
     "else:\n",
     "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#167 B"
    ]
   },
   {
@@ -47,6 +169,15 @@
     "        print(a)\n",
     "else:\n",
     "    print(a-(k-(a+b)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#167 C"
    ]
   },
   {
