--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -106,11 +106,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 2\n",
+      "Yes\n",
+      "1\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,M = map(int,input().split())\n",
+    "a=[[] for _ in range(N)]\n",
+    "for _ in range(M):\n",
+    "    A,B = map(int,input().split())\n",
+    "    a[A-1].append(B-1)\n",
+    "    a[B-1].append(A-1)\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "d=deque()\n",
+    "d.append(0)\n",
+    "ans = [0]*N\n",
+    "while len(d)!=0:\n",
+    "    now = d.popleft()\n",
+    "    for to in a[now]:\n",
+    "        if ans[to]==0:\n",
+    "            ans[to]=ans[now]+1\n",
+    "            d.append(to)\n",
+    "print(\"Yes\")\n",
+    "for i in range(N-1):\n",
+    "    print(ans[i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 2, 2]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#167 A"
+    "# 167 A"
    ]
   },
   {
