--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3743,6 +3743,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#151 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n",
+      "1 AC\n",
+      "1 WA\n",
+      "2 AC\n",
+      "2 WA\n",
+      "3 WA\n",
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,M=map(int,input().split())\n",
+    "P,S=[],[]\n",
+    "count=0\n",
+    "ans,pen=0,0\n",
+    "for _ in range(M):\n",
+    "    A,B=map(str,input().split())\n",
+    "    P.append(int(A))\n",
+    "    S.append(B)\n",
+    "for i in range(1,N+1):\n",
+    "    for j in range(count,M):\n",
+    "        if i==P[j] and S[j]==\"WA\":\n",
+    "            pen+=1\n",
+    "            count+=1\n",
+    "        elif i==P[j] and S[j]==\"AC\":\n",
+    "            ans+=1\n",
+    "            count+=1\n",
+    "            break\n",
+    "print(ans,pen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n",
+      "1 WA\n",
+      "2 WA\n",
+      "2 WA\n",
+      "3 WA\n",
+      "1 AC\n",
+      "1 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,M=map(int,input().split())\n",
+    "P,S=[],[]\n",
+    "ans,pen=0,0\n",
+    "task=[0]*N\n",
+    "for _ in range(M):\n",
+    "    A,B=map(str,input().split())\n",
+    "    P.append(int(A))\n",
+    "    S.append(B)\n",
+    "\n",
+    "for j in range(M):\n",
+    "    if task[P[j]-1]!=-1 and S[j]==\"WA\":\n",
+    "        task[P[j]-1]+=1\n",
+    "    elif task[P[j]-1]!=-1 and S[j]==\"AC\":\n",
+    "        ans+=1\n",
+    "        pen+=task[P[j]-1]\n",
+    "        task[P[j]-1]=-1\n",
+    "print(ans,pen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
