--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3831,6 +3831,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#150 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1 2 3\n",
+      "1 2 3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "P=tuple(map(str,input().split()))\n",
+    "Q=tuple(map(str,input().split()))\n",
+    "count=0\n",
+    "a,b=0,0\n",
+    "import itertools\n",
+    "if P==Q:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    for i in itertools.permutations(sorted(P),len(P)):\n",
+    "        count+=1\n",
+    "        if i==P:\n",
+    "            a=count\n",
+    "        elif i==Q:\n",
+    "            b=count\n",
+    "    print(abs(a-b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(per)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1', '2', '3')\n",
+      "('1', '3', '2')\n",
+      "('2', '1', '3')\n",
+      "('2', '3', '1')\n",
+      "('3', '1', '2')\n",
+      "('3', '2', '1')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "per=\"321\"\n",
+    "per=sorted(per)\n",
+    "for i in itertools.permutations(per,3):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1', '2', '3')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
