--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -3910,6 +3910,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#148 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=list(map(int,input().split()))\n",
+    "x=max(A)\n",
+    "n=min(A)\n",
+    "while(n!=0):\n",
+    "    x,n=n,x%n\n",
+    "print(int(max(A)*min(A)/x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
