--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "３\n",
+      "bon\n"
+     ]
+    }
+   ],
    "source": [
     "N=str(input())\n",
     "if int(N[-1])==3:\n",
@@ -3934,6 +3943,90 @@
     "while(n!=0):\n",
     "    x,n=n,x%n\n",
     "print(int(max(A)*min(A)/x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#147 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    "A,X,Y=[],[],[]\n",
+    "for _ in range(N):\n",
+    "    a=int(input())\n",
+    "    for _ in range(a):\n",
+    "        x,y=map(int,input().split())\n",
+    "        X.append(x)\n",
+    "        Y.append(y)\n",
+    "    A.append(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#146 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 7 100\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#二分探索\n",
+    "A,B,X=map(int,input().split())\n",
+    "m=0\n",
+    "M=pow(10,9)+1\n",
+    "while M-m>1:\n",
+    "    a=(m+M)//2\n",
+    "    money=a*A+len(str(a))*B\n",
+    "    if money<=X:\n",
+    "        m=a\n",
+    "    else:\n",
+    "        M=a\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3//2"
    ]
   },
   {
