--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4011,22 +4011,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#145 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "-879 981\n",
+      "-866 890\n",
+      "91.92388155425118\n"
+     ]
     }
    ],
    "source": [
-    "3//2"
+    "import itertools,math\n",
+    "\n",
+    "N=int(input())\n",
+    "X,Y=[],[]\n",
+    "for _ in range(N):\n",
+    "    x,y=map(int,input().split())\n",
+    "    X.append(x)\n",
+    "    Y.append(y)\n",
+    "\n",
+    "d=0\n",
+    "d_all=[]\n",
+    "for i in itertools.permutations(range(N),N):\n",
+    "    for j in range(N-1):\n",
+    "        d+=math.sqrt((X[i[j+1]]-X[i[j]])**2+(Y[i[j+1]]-Y[i[j]])**2)\n",
+    "    d_all.append(d)\n",
+    "    d=0\n",
+    "print(sum(d_all)/math.factorial(N))"
    ]
   },
   {
