--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4021,7 +4021,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4052,6 +4054,38 @@
     "    d_all.append(d)\n",
     "    d=0\n",
     "print(sum(d_all)/math.factorial(N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#144 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000019\n",
+      "10000000018\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "ans=[]\n",
+    "for i in range(1,int(N**.5)+2):\n",
+    "    if N%i<1:\n",
+    "        ans.append(N//i+i-2)\n",
+    "print(min(ans))"
    ]
   },
   {
