--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -73,6 +73,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "198 1.10\n",
+      "217\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=map(str,input().split())\n",
+    "b=int(b.replace(\".\",\"\"))\n",
+    "a=int(a)\n",
+    "print(a*b//100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
