--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4186,6 +4186,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#143 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "aabbbbaaca\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "S=list(input())\n",
+    "count=N\n",
+    "for i in range(N-1):\n",
+    "    if S[i]==S[i+1]:\n",
+    "        count-=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
