--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4260,6 +4260,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#141 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 13 15\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "9\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "Yes\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "Yes\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,K,Q=map(int,input().split())\n",
+    "A=[]\n",
+    "for _ in range(Q):\n",
+    "    A.append(int(input()))\n",
+    "ans=[0]*N\n",
+    "for i in range(Q):\n",
+    "    ans[A[i]-1]+=1\n",
+    "for j in range(N):\n",
+    "    if Q-K<ans[j]:\n",
+    "        print(\"Yes\")\n",
+    "    else:\n",
+    "        print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 4, 5, 3, 3, 3]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
