--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4318,22 +4318,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#140 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[4, 4, 5, 3, 3, 3]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2 5\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
-    "ans"
+    "N=int(input())\n",
+    "B=list(map(int,input().split()))\n",
+    "A=[]\n",
+    "for i in range(N):\n",
+    "    if i==0:\n",
+    "        A.append(B[0])\n",
+    "    elif i==N-1:\n",
+    "        A.append(B[N-2])\n",
+    "    else:\n",
+    "        A.append(min(B[i-1],B[i]))\n",
+    "print(sum(A))"
    ]
   },
   {
