--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4360,6 +4360,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#139 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "H=list(map(int,input().split()))\n",
+    "count=0\n",
+    "ans=[]\n",
+    "for i in range(1,N):\n",
+    "    if H[i-1]>=H[i]:\n",
+    "        count+=1\n",
+    "        if i==N-1:\n",
+    "            ans.append(count)\n",
+    "    else:\n",
+    "        ans.append(count)\n",
+    "        count=0\n",
+    "\n",
+    "if N==1:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    print(max(ans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
