--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4478,6 +4478,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#136 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "100000\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "H=list(map(int,input().split()))\n",
+    "a=0\n",
+    "for i in range(N-1):\n",
+    "    if a<H[i]:\n",
+    "        a=H[i]\n",
+    "    if a-1>H[i+1]:\n",
+    "        print(\"No\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Yes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
