--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4516,6 +4516,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#137 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3 5 2\n",
+      "4 5\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "B=list(map(int,input().split()))\n",
+    "ans=0\n",
+    "for i in range(N):\n",
+    "    a=min(A[i],B[i])\n",
+    "    B[i]-=a\n",
+    "    b=min(A[i+1],B[i])\n",
+    "    A[i+1]-=b\n",
+    "    ans+=a+b\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
