--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4516,7 +4516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#137 C"
+    "#135 C"
    ]
   },
   {
@@ -4547,6 +4547,45 @@
     "    A[i+1]-=b\n",
     "    ans+=a+b\n",
     "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#134 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "A=[]\n",
+    "for _ in range(N):\n",
+    "    A.append(int(input()))\n",
+    "B=sorted(A,reverse=True)\n",
+    "for i in range(N):\n",
+    "    if A[i]!=B[0]:\n",
+    "        print(B[0])\n",
+    "    else:\n",
+    "        print(B[1])"
    ]
   },
   {
