--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#170 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=list(map(int,input().split()))\n",
+    "for i in range(5):\n",
+    "    if x[i]==0:\n",
+    "        print(i+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#170 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,Y=map(int,input().split())\n",
+    "ans=\"No\"\n",
+    "for i in range(0,X+1):\n",
+    "    if 2*i+4*(X-i)==Y:\n",
+    "        print(\"Yes\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#170 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,N=map(int,input().split())\n",
+    "P=list(map(int,input().split()))\n",
+    "m=100\n",
+    "ans=0\n",
+    "lis=list(range(101,-1,-1))\n",
+    "for k in lis:\n",
+    "    for l in range(N):\n",
+    "        if k==P[l]:\n",
+    "            lis[101-k]=0\n",
+    "for i in lis:\n",
+    "    if abs(i-X)<=m:\n",
+    "        m=abs(i-X)\n",
+    "        ans=i\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#170 D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "B=[0]*N\n",
+    "count=0\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if A[i]%A[j]==0:\n",
+    "            count+=1\n",
+    "            if count==2:\n",
+    "                break\n",
+    "    if count==1:\n",
+    "        B[i]=1\n",
+    "    else:\n",
+    "        B[i]=0\n",
+    "    count=0\n",
+    "print(sum(B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#169 A"
    ]
   },
