--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -112,6 +112,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "24 11 8 3 16\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "B=[0]*(max(A)+1)\n",
+    "count=0\n",
+    "for i in A:\n",
+    "    for j in range(0,len(B),i):\n",
+    "        B[j]+=1\n",
+    "for k in A:\n",
+    "    if B[k]==1:\n",
+    "        count+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
