--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -4842,6 +4842,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#131 C ×"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 40 6 8\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "A,B,C,D=map(int,input().split())\n",
+    "import math\n",
+    "def lcm(x, y):\n",
+    "    return (x * y) // math.gcd(x, y)\n",
+    "print(B-A+1-(B-B//C-(A-A//C))-(B-B//D-(A-A//D))+B-B//lcm(C,D)-(A-A//lcm(C,D)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#92 C"
    ]
   },
