--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -6,6 +6,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#171 A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=str(input())\n",
+    "ABC=[chr(i) for i in range(65, 65+26)]\n",
+    "if N in ABC:\n",
+    "    print(\"A\")\n",
+    "else:\n",
+    "    print(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#171 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N,K=map(int,input().split())\n",
+    "p=list(map(int,input().split()))\n",
+    "p=sorted(int(i) for i in p)\n",
+    "print(sum(p[0:K]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#171 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=0\n",
+    "b=1\n",
+    "while 1000000000000001>a:\n",
+    "    a+=26**b\n",
+    "    b+=1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#171 D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    "A=list(map(int,input().split()))\n",
+    "Q=int(input())\n",
+    "B=[]\n",
+    "for _ in range(Q):\n",
+    "    B.append(list(map(int,input().split())))\n",
+    "s=sum(A)\n",
+    "from collections import Counter\n",
+    "a=Counter(A)\n",
+    "b=list(a.keys())\n",
+    "c=list(a.values())\n",
+    "for i in range(Q):\n",
+    "    s-=B[i][0]*a[B[i][0]]\n",
+    "    s+=B[i][1]*a[B[i][0]]\n",
+    "    a[B[i][1]]+=a[B[i][0]]\n",
+    "    a[B[i][0]]=0\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#170 A"
    ]
   },
