--- a/AtCoder_Begnner_Contest.ipynb
+++ b/AtCoder_Begnner_Contest.ipynb
@@ -55,16 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456789\n",
+      "jjddja\n"
+     ]
+    }
+   ],
    "source": [
-    "a=0\n",
-    "b=1\n",
-    "while 1000000000000001>a:\n",
-    "    a+=26**b\n",
-    "    b+=1\n",
-    "print(b)"
+    "N=int(input())\n",
+    "abc=[chr(i) for i in range(97, 97+26)]\n",
+    "ans=\"\"\n",
+    "while N>0:\n",
+    "    N-=1\n",
+    "    ans+=(abc[N%26])\n",
+    "    N//=26\n",
+    "print(ans[::-1])"
    ]
   },
   {
@@ -1460,6 +1471,38 @@
     "    print(\"Yes\")\n",
     "else:\n",
     "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#156 B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "314159265 3\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "N,K=map(int,input().split())\n",
+    "ans=1\n",
+    "while N>=K:\n",
+    "    N//=K\n",
+    "    ans+=1\n",
+    "print(ans)"
    ]
   },
   {
@@ -4966,6 +5009,37 @@
     "def lcm(x, y):\n",
     "    return (x * y) // math.gcd(x, y)\n",
     "print(B-A+1-(B-B//C-(A-A//C))-(B-B//D-(A-A//D))+B-B//lcm(C,D)-(A-A//lcm(C,D)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#130 C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 1 2\n",
+      "3.0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "W,H,x,y=map(int,input().split())\n",
+    "if 0<x<W and 0<y<H:\n",
+    "    print(W*H/2,1)\n",
+    "else:\n",
+    "    print(W*H/2,0)"
    ]
   },
   {
